# terraform-parse

./: NOTES.md  README.md  docker-compose.localstack.yml  docker-compose.yml  env.example
helm/: CHANGES.md  Chart.yaml  Makefile  TROUBLESHOOTING.md  validate-chart.sh  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
scripts/: test-terraform.sh
terraform/: localstack-backend.tf  main.tf  outputs.tf  variables.tf
terraform/env/: dev.tfvars  prod.tfvars  staging.tfvars
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  variables.tf
terraform/modules/s3_bucket/: main.tf  outputs.tf  variables.tf
terraform_parse_service/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
terraform_parse_service/app/: __init__.py  config.py  main.py  routers.py  schemas.py
terraform_parse_service/app/services/: terraform_writer.py
terraform_parse_service/app/templates/: s3_bucket.tf.j2
terraform_parse_service/tests/: __init__.py  test_generate.py
